compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test3.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "record Point { Point(x: Int, y: Int) }\n                fn y() { fn() { Point }()(4, 6) }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-file("/root/project/test/my/mod.rakun", 2).
-spec y() -> point().
y() ->
    ((fun() -> fun(Field@0, Field@1) -> {point, Field@0, Field@1} end end)())(
        4,
        6
    ).
