compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__negation.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 542
expression: "pub fn negate(x) {\n  !x\n}"
---
----- SOURCE CODE
pub fn negate(x) {
  !x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([negate/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec negate(boolean()) -> boolean().
negate(X) ->
    not X.
