compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__negation_block.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn negate(x) {\n  !{\n    123\n    x\n  }\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([negate/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec negate(boolean()) -> boolean().
negate(X) ->
    not begin
        123,
        X
    end.
