compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__positive_zero.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 638
expression: "\npub fn main() {\n  0.0\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0.0
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> float().
main() ->
    +0.0.
