compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__recursive_type.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 444
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  id(id)\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec id(I) -> I.
id(X) ->
    X.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> fun((M) -> M).
main() ->
    id(fun id/1).
