compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__scientific_notation.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  1.0e6\n  1.e6\n}\n"
---
----- SOURCE CODE

pub fn main() {
  1.0e6
  1.e6
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> float().
main() ->
    1.0e6,
    1.0e6.
